Fixed dark mode.

--- a/j-CheckPath/component.css
+++ b/j-CheckPath/component.css
@@ -11,4 +11,4 @@
 .ui-checkpath > div b { width: 70px; float: left; }
 .ui-checkpath-animate { transform: scale(1.3); }
 
-.ui-dark .uicheckpath { background: #333; box-shadow: 0px 8px 8px rgba(0,0,0,0.1); border-color: #404040; }
+.ui-dark .ui-checkpath { background: #333; box-shadow: 0px 8px 8px rgba(0,0,0,0.1); border-color: #404040; }
